Prevent wrapping of difficulty icon

--- a/resources/assets/less/bem/score-beatmap.less
+++ b/resources/assets/less/bem/score-beatmap.less
@@ -26,6 +26,7 @@
       border-radius: 10000px;
       padding: 2px 8px;
       font-size: @font-size--normal;
+      flex: none;
     }
   }
 
